fix cart total items responsive alignment

--- a/src/components/navbar/NavBar.scss
+++ b/src/components/navbar/NavBar.scss
@@ -63,7 +63,6 @@
 
 				&__icon {
 					font-size: 25px;
-					margin: 0 10px;
 				}
 
 				&__totalItems {
@@ -73,9 +72,9 @@
 					font-size: 16px;
 					border-radius: 50%;
 					text-align: center;
-					position: absolute;
-					top: 10px;
-					right: 128px;
+					position: relative;
+					top: -15px;
+					right: 5px;
 				}
 			}
 		}
